@@ -32,6 +32,7 @@ MBDyn 1.X-Devel
 		- added periodic drive caller
 		- added node/element private data funcs to model namespace
 		- added "current" func to model namespace
+		- added partial driven element support to inverse dynamics
 	Backward compatibility issues:
 		- the (undocumented) output of the total (pin) joint changed
 		- the induced velocity element internal API changed
